--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ cover/
 *.log
 local_settings.py
 db.sqlite3
-db.sqlite3
+*.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
@@ -156,3 +156,4 @@ cython_debug/
 myDoc.txt
 db.sqlite3
 *.sqlite3
+db.sqlite3
