--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 asgiref==3.5.2
+autopep8==1.7.0
 Django==3.2.15
+django-robots==5.0
 gunicorn==20.1.0
 Pillow==9.2.0
 portalocker==2.5.1
 psycopg2==2.9.3
+pycodestyle==2.9.1
 pytz==2022.2.1
 pywin32==304
 sqlparse==0.4.2
+toml==0.10.2
 waitress==2.1.2
 whitenoise==6.2.0
