--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 asgiref==3.5.2
 autopep8==1.7.0
+bleach==5.0.1
 Django==3.2.15
+django-debug-toolbar==3.6.0
+django-multi-captcha-admin==2.0.0
+django-ranged-response==0.2.0
 django-robots==5.0
+django-simple-captcha==0.5.17
+django-summernote==0.8.20.0
+django-taggit==3.0.0
 gunicorn==20.1.0
 Pillow==9.2.0
 portalocker==2.5.1
@@ -9,7 +16,9 @@ psycopg2==2.9.3
 pycodestyle==2.9.1
 pytz==2022.2.1
 pywin32==304
+six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 waitress==2.1.2
+webencodings==0.5.1
 whitenoise==6.2.0
