--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-asgiref==3.5.2
-autopep8==1.7.0
-bleach==5.0.1
-Django==3.2.15
-django-debug-toolbar==3.6.0
-django-multi-captcha-admin==2.0.0
-django-ranged-response==0.2.0
-django-robots==5.0
-django-simple-captcha==0.5.17
-django-summernote==0.8.20.0
-django-taggit==3.0.0
-gunicorn==20.1.0
-Pillow==9.2.0
-portalocker==2.5.1
-psycopg2==2.9.3
-pycodestyle==2.9.1
-pytz==2022.2.1
-pywin32==304
-six==1.16.0
-sqlparse==0.4.2
-toml==0.10.2
-waitress==2.1.2
-webencodings==0.5.1
-whitenoise==6.2.0
+async-generator==1.10
+attrs==22.1.0
+beautifulsoup4==4.11.1
+bs4==0.0.1
+certifi==2022.6.15
+cffi==1.15.1
+cowsay==5.0
+cryptography==37.0.4
+get-mac==0.8.3
+h11==0.13.0
+idna==3.3
+lolcat==1.4
+outcome==1.2.0
+pycparser==2.21
+pyOpenSSL==22.0.0
+PySocks==1.7.1
+selenium==4.4.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+trio==0.21.0
+trio-websocket==0.9.2
+urllib3==1.26.11
+wsproto==1.1.0
