--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,7 @@ ENV/
 env.bak/
 venv.bak/
 
-.CACHE/
+
 
 # Spyder project settings
 .spyderproject
@@ -152,3 +152,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+
+*CACHE/
